Should finally fix the overflow issue

--- a/public/site_assets/faucet/css/layout-unauthorized.css
+++ b/public/site_assets/faucet/css/layout-unauthorized.css
@@ -44,8 +44,6 @@ header#header h1.site_title, header#header h2.section_title {
 white-space: nowrap;
 float: left;
 margin: 0;
-margin-right: 2.8%;
-padding-right: 1.8%;
 font-size: 22px;
 display: inline-block;
 height: 55px;
@@ -55,6 +53,11 @@ text-indent: 1.8%;
 line-height: 55px;
 color: #fff;
 text-shadow: 0 -1px 0 #000;
+}
+
+header#header h1.site_title {
+width:100%;
+text-align:center;
 }
 
 header#header h1.site_title a {
